# render-usd

./: .gitignore  README.md  environment.yml  pyproject.toml
.trae/documents/: Git 仓库初始化计划.md  Miniconda 安装与环境配置计划.md  Render-USD 重构计划.md  修复渲染结果全黑问题.md  安装与单文件渲染测试计划.md  清理旧数据并渲染新指定文件.md  环境验证与测试计划.md
docs/: README.md  README_zh.md  architecture.md  development.md  getting_started.md  usage.md  usage_zh.md
docs/api/: core.md  core_zh.md  utils.md  utils_zh.md
docs/design/: architecture_zh.md
docs/dlc/: README.md  README_zh.md
docs/guides/: development.md  development_zh.md  getting_started_zh.md  usage.md  usage_zh.md
examples/0a85b986de35ccfdec7c686d791fd747/: 0a85b986de35ccfdec7c686d791fd747_annotation.json
scripts/dlc/: launch_job.sh  run_task.sh  submit_batch.py
scripts/object_rendering/: object_rendering.py
scripts/object_rendering/submit_scripts/: launch_render_grscenes100.sh  render_grscenes100.sh  submit_grscenes100.py
src/render_usd/: cli.py
src/render_usd/config/: settings.py
src/render_usd/core/: camera.py  renderer.py  scene.py
src/render_usd/utils/caption_utils/: gpt_utils.py  post_process.py  qwen_utils.py  visualize_utils.py
src/render_usd/utils/common_utils/: images_utils.py  path_utils.py  semantic_utils.py  sim_utils.py
src/render_usd/utils/usd_utils/: mdl_utils.py  prim_utils.py  stage_utils.py
